refactor: rename package to react-native-smooth-bootsplash

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-bootsplash",
+  "name": "react-native-smooth-bootsplash",
   "package-specs": {
     "module": "es6",
     "in-source": true
