--- a/example/package.json
+++ b/example/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-native-bootsplash-example",
+  "name": "react-native-smooth-bootsplash-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "clean-modules": "rm -rf ./node_modules/react-native-bootsplash/{example,node_modules}",
+    "clean-modules": "rm -rf ./node_modules/react-native-smooth-bootsplash/{example,node_modules}",
     "clean": "rm -rf ./node_modules ./ios/Pods",
     "preinstall": "cd .. && yarn prepack && cd example",
     "postinstall": "yarn clean-modules && pod-install",
@@ -14,7 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-bars": "^1.3.0",
-    "react-native-bootsplash": "file:../",
+    "react-native-smooth-bootsplash": "file:../",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.5.0"
   },
