--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-smooth-bootsplash",
-  "version": "4.5.0",
+  "version": "4.5.1",
   "license": "MIT",
   "description": "Display a bootsplash on your app starts. Hide it when you want.",
   "author": "Mathieu Acthernoene <zoontek@gmail.com>",
@@ -61,8 +61,8 @@
   },
   "dependencies": {
     "fs-extra": "^11.1.0",
-    "sharp": "^0.31.3",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
